--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+
+/*
+   MY CSS template
+*/
 /*
 =============== 
 Variables
@@ -111,6 +115,7 @@ p {
   }
   body {
     font-size: 1rem;
+    background-color: var(--clr-grey-1);
   }
   h1,
   h2,
@@ -160,11 +165,11 @@ main {
 }
 /*
 =============== 
-Grocery List
+todolistcss List
 ===============
 */
 .section-center {
-  background: var(--clr-white);
+  background: var(--clr-grey-10);
   border-radius: var(--radius);
   box-shadow: var(--light-shadow);
   transition: var(--transition);
@@ -192,7 +197,7 @@ Grocery List
   color: #155724;
   background: #d4edda;
 }
-.grocery-form h3 {
+.todo-form h3 {
   color: var(--clr-primary-1);
   margin-bottom: 1.5rem;
   text-align: center;
@@ -201,10 +206,10 @@ Grocery List
   display: flex;
   justify-content: center;
 }
-.grocery {
+.todo {
   padding: 0.25rem;
   padding-left: 1rem;
-  background: var(--clr-grey-10);
+  background: var(--clr-grey-1);
   border-top-left-radius: var(--radius);
   border-bottom-left-radius: var(--radius);
   border-color: transparent;
@@ -212,7 +217,7 @@ Grocery List
   flex: 1 0 auto;
   color: var(--clr-grey-5);
 }
-.grocery::placeholder {
+.todo::placeholder {
   font-family: var(--ff-secondary);
   color: var(--clr-grey-5);
 }
@@ -237,11 +242,11 @@ Grocery List
   color: var(--clr-white);
 }
 
-.grocery-container {
+.todo-container {
   margin-top: 2rem;
 }
 
-.grocery-item {
+.todo-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -251,11 +256,11 @@ Grocery List
   border-radius: var(--radius);
   text-transform: capitalize;
 }
-.grocery-item:hover {
+.todo-item:hover {
   color: var(--clr-grey-5);
   background: var(--clr-grey-10);
 }
-.grocery-item:hover .title {
+.todo-item:hover .title {
   color: var(--clr-grey-5);
 }
 .title {
@@ -269,12 +274,13 @@ Grocery List
   background: transparent;
   border-color: transparent;
   cursor: pointer;
-  font-size: 0.7rem;
+  font-size: 1rem;
   margin: 0 0.15rem;
   transition: var(--transition);
 }
 .edit-btn {
   color: var(--clr-green-light);
+  
 }
 .edit-btn:hover {
   color: var(--clr-green-dark);
